--- a/calculator/style.css
+++ b/calculator/style.css
@@ -38,7 +38,7 @@ button{
     background-color: hsl(0, 0%, 30%);
     font-size: 3rem;
     color: white;
-    font-weight: bold;
+    font-weight: 400;
     cursor: pointer;
 }
 button:hover{
