--- a/calculator/style.css
+++ b/calculator/style.css
@@ -10,18 +10,23 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: hsl(0, 0%, 15%);
     border-radius: 3%;
-    max-width: 500px;
-    overflow: hidden;
+    max-width: 32rem;
+    overflow: hidden; 
 }
 #display{
-    width: 100%;
+    width: 10px;
+ 
     padding: 20px;
-    font-size: 5rem;
-    text-align: left;
+    display: flow-root;
+    font-size: 4rem;
+    height: 4rem;
+    width: auto;
+    text-align: right;
     border:none;
     background-color: hsl(0, 0%, 20%);
     color: white;
-
+    margin: 0 54rem 0 0;
+    overflow-x: auto;
 }
 #keys{
     display: grid;
