--- a/calculator/style.css
+++ b/calculator/style.css
@@ -14,19 +14,20 @@ body{
     overflow: hidden; 
 }
 #display{
-    width: 10px;
+    width: 1px;
  
     padding: 20px;
-    display: flow-root;
+    display: block;
     font-size: 4rem;
     height: 4rem;
-    width: auto;
+    width:90%;
+    /* width: auto; */
     text-align: right;
-    border:none;
+    border:2px solid red;
     background-color: hsl(0, 0%, 20%);
     color: white;
-    margin: 0 54rem 0 0;
-    overflow-x: auto;
+    /* margin: 0 54rem 0 0; */
+    
 }
 #keys{
     display: grid;
