--- a/LUDO/style.css
+++ b/LUDO/style.css
@@ -3,6 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+:root{
+    --box:45px;
+    --font-size:1.8rem;
+}
 
 
 body{
@@ -12,31 +16,31 @@ body{
 }
 
 .outer-container{
-    height: 675px;
-    width: 675px;
+    height: calc(15*var(--box));
+    width: calc(15*var(--box));
     outline: 2px solid rgb(0, 0, 0);
     display: flex;
 }
 .column-left, .column-right{
-    width: 270px;
-    height:675px;
+    width: calc(6*var(--box));
+    height:calc(6*var(--box));
   
 }
 .column-middle{
-    width: 135px;
+    width: calc(3*var(--box));
     /* border: 2px solid red; */
 }
 .home{
-    width: 270px;
-    height: 270px;
+    width: calc(6*var(--box));
+    height:calc(6*var(--box));
     /* border: 2px solid black; */
-    padding: 45px;
+    padding: var(--box);
 }
 
 .home .rooms{
     /* border: 2px solid red; */
-    width: 180px;
-    height: 180px;
+    width: calc(4*var(--box));
+    height: calc(4*var(--box));
     display: grid;
     grid-template-columns: repeat(2,1fr);
  
@@ -47,15 +51,15 @@ body{
 
  /* border: 3px solid red; */
  /* border-radius: 50%; */
- height: 90px;
- width: 90px;   
+ height: calc(2*var(--box));
+ width: calc(2*var(--box));   
 
  /* margin: 100px; */
 }
 .room div{
-    height: 45px;
-    width: 45px;
-    margin: 20px;
+    height: var(--box);
+    width:var(--box);
+    margin: calc(44*var(--box)/100);
     /* border: 4px solid red; */
     border-radius: 50%;
 }
@@ -63,36 +67,36 @@ body{
 
 }
 .road-left{
-    height: 135px;
-    width: 270px;
+    height: calc(3*var(--box));
+    width: calc(6*var(--box));
     /* border: 2px solid blue; */
     display: flex;
     flex-direction: column;
 }
 .top-road, .middle-road, .bottom-road{
-    height: 45px;
-    width: 270px;   
+    height: var(--box);
+    width: calc(6*var(--box));   
     /* border: 2px solid black; */
     display: flex;
 }
 
 .box{
-    height: 45px;
-    width: 45px;
+    height: var(--box);
+    width: var(--box);
     border: 1px solid black;
 }
 .win{
-    height:135px ;
-    width:135px ;
+    height:calc(3*var(--box)) ;
+    width:calc(3*var(--box));
     border: 2px solid black;
-    border-top: 67.5px solid green;
-    border-left: 67.5px solid red;
-    border-bottom: 67.5px solid blue;
-    border-right: 67.5px solid yellow;
+    border-top: calc(var(--box)*3/2) solid green;
+    border-left: calc(var(--box)*3/2) solid red;
+    border-bottom: calc(var(--box)*3/2) solid blue;
+    border-right: calc(var(--box)*3/2) solid yellow;
 }
 .road-right{
-    height: 270px;
-    width: 135px;
+    height: calc(var(--box)*6);
+    width: calc(var(--box)*3);
     /* border: 2px solid blue; */
     display: flex;
     flex-direction: row;
@@ -130,8 +134,10 @@ body{
     border: 4px solid yellow;
 }
 .star{
-    font-size: 2rem;
+    font-size:var(--font-size);
     display: flex;
-    text-align: center;
+    /* text-align: center; */
+    align-items: center;
+    vertical-align: center;
     justify-content: center;
 }
