--- a/LUDO copy/style.css
+++ b/LUDO copy/style.css
@@ -7,12 +7,24 @@
     --box:45px;
     --font-size:1.8rem;
 }
-
+.player1-2{
+    width: calc(15*var(--box));
+    height: var(--box);
+    outline: 2px solid red;
+    background-color: black;
+    z-index: 3;
+}
 
 body{
+display: grid;
+justify-content: center;
+align-items: center;
+}
+main{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+justify-content: center;
+align-items: center;
 }
 
 .outer-container{
@@ -63,9 +75,7 @@ body{
     /* border: 4px solid red; */
     border-radius: 50%;
 }
-.column-left .home{
 
-}
 .road-left{
     height: calc(3*var(--box));
     width: calc(6*var(--box));
