--- a/LUDO copy/style.css
+++ b/LUDO copy/style.css
@@ -3,9 +3,33 @@
     padding: 0;
     box-sizing: border-box;
 }
+.box{
+display: flex;
+justify-content: center;
+align-items: center;
+background-color: black;}
+header{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 4;
+    color: black;
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+header .forms{
+    border-top: 2px solid yellow;
+    box-shadow: 0 0 10px yellow;
+    width: 100%;
+    height: 50%;
+    background-image : linear-gradient(black,blue ,black );
+    border-bottom: 2px solid yellow;
+}
 :root{
     --box:45px;
-    --font-size:1.8rem;
+    --font-size:1rem;
 }
 .player1-2{
     width: calc(15*var(--box));
@@ -15,17 +39,25 @@
     z-index: 3;
 }
 
-body{
-display: grid;
-justify-content: center;
-align-items: center;
+body {
+    display: grid;
+    place-items: center;
+    min-height: 100%;
 }
-main{
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+main {
     display: flex;
     flex-direction: column;
-justify-content: center;
-align-items: center;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
+
+
 
 .outer-container{
     height: calc(15*var(--box));
@@ -150,4 +182,11 @@ align-items: center;
     align-items: center;
     vertical-align: center;
     justify-content: center;
+}
+/* code for buttons */
+.player-1{
+    width: calc(var(--box)*7/10);
+    height: calc(var(--box)*7/10);
+    border-radius: 50%;
+    background-color: rgb(16, 20, 16);
 }
