--- a/goblins-responsive/style.css
+++ b/goblins-responsive/style.css
@@ -30,24 +30,23 @@
     background: transparent;
   }
   .navList {
-   position: absolute;
-   top: 100%;
-   right: -100%;
-   color: white;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   background-color: #4d9559;
-   transition: all .55s ease;
+    position: absolute;
+    top: 100%;
+    right: -100%;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #4d9559;
+    transition: all 0.55s ease;
   }
-  .navList.open{
+  .navList.open {
     right: 0;
   }
-  .navList li{
+  .navList li {
     padding: 1rem 3rem;
     display: flex;
     justify-content: center;
-
   }
   .logo {
     font-size: 2rem;
@@ -61,6 +60,7 @@
     z-index: 1001;
   }
   .hero {
+    border: 1px solid red;
     height: 100%;
     width: 100%;
     min-height: 100vh;
@@ -70,10 +70,59 @@
       #38703d 28.53%,
       #133917 75.52%
     );
-  
+    position: relative;
+    display: flex;
+    /* grid-template-columns: repeat(2,1fr); */
+    align-items: center;
+    /* justify-content: space-evenly; */
+    flex-direction: column;
   }
-  .icons{
-    display: none;
+  section {
+    padding: 25% 13%;
+  }
+  .hero-img img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+  }
+
+  /* text */
+
+  .hero-text h5 {
+    font-size: 0.8rem;
+    font-weight: 400;
+    color: white;
+    margin-bottom: 40px;
+  }
+  .hero-text h1 {
+    font-size: 4rem;
+    line-height: 1;
+    color: white;
+    margin: 0 0 1rem;
+  }
+  .hero-text h4 {
+    color: whitesmoke;
+  }
+  .hero-text p {
+    color: white;
+    font-size: 1rem;
+    line-height: 1.9;
+    /* margin-bottom: 2rem; */
+  }
+
+  .icons {
+    position: absolute;
+    /* border: 2px solid red; */
+    top: 40%;
+    left: 3%;
+    font-size: 1.5rem;
+    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+  }
+  .icons i:hover {
+    color: #4d9559;
   }
   .scroll-down {
     position: absolute;
@@ -90,8 +139,7 @@
     transition: all 0.5s ease;
   }
 
-  .scroll-down i:hover{
+  .scroll-down i:hover {
     transform: translateY(-5px);
   }
-  
 }
